--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
           # Target branch
           PAGES_BRANCH: gh-pages
           # Provide personal access token
-          TOKEN: ${{ secrets.ZOLA_DEPLOY_INITIAL }}
+          TOKEN: ${{ secrets.DEPLOY }}
