--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
         uses: actions/checkout@v2
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.14.1
-        env:
-          # Target branch
-          PAGES_BRANCH: gh-pages
-          # Provide personal access token
-          TOKEN: ${{ secrets.DEPLOY }}
+        with: 
+            branch: gh-pages
+            folder: build
+            clean: true
+            ssh-key: ${{ secrets.DEPLOY }}
